[gd_scene load_steps=30 format=2]

[ext_resource path="res://controller/LevelController.gd" type="Script" id=1]
[ext_resource path="res://music/Ondel Ondel - Jakarta.wav" type="AudioStream" id=2]
[ext_resource path="res://entity/lane/sprites/sprite_1.png" type="Texture" id=3]
[ext_resource path="res://entity/lane/Lane.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://entity/lane/HitterButton.gd" type="Script" id=6]
[ext_resource path="res://entity/lane/sprites/sprite_2.png" type="Texture" id=7]
[ext_resource path="res://entity/lane/sprites/sprite_0.png" type="Texture" id=8]
[ext_resource path="res://entity/dancer/Dancer.tscn" type="PackedScene" id=9]
[ext_resource path="res://entity/dancer/sprites/Dancer_Man_OndelOndel.png" type="Texture" id=10]
[ext_resource path="res://entity/dancer/sprites/Dancer_Woman_OndelOndel.png" type="Texture" id=11]
[ext_resource path="res://sound/beep.wav" type="AudioStream" id=12]
[ext_resource path="res://level/gui/GUIController.gd" type="Script" id=13]
[ext_resource path="res://font/LCD_Solid.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://level/gui/bar_0.png" type="Texture" id=15]
[ext_resource path="res://level/gui/Bar.gd" type="Script" id=16]
[ext_resource path="res://level/gui/bar_2.png" type="Texture" id=17]
[ext_resource path="res://level/gui/bar_1.png" type="Texture" id=18]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 288, 184, 0, 0, 0, 0, 96, 1440 )
}

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 336, 184, 0, 0, 0, 0, 272, 1440 )
}

[sub_resource type="CircleShape2D" id=4]
radius = 32.0

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 384, 184, 0, 0, 0, 0, 448, 1440 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 432, 184, 0, 0, 0, 0, 624, 1440 )
}

[sub_resource type="DynamicFont" id=7]
size = 52
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=9]
size = 46
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=12]
size = 72
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=11]
size = 42
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 14 )

[node name="Level1" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 352.0, 1115.26, 576.0 ],
"_edit_vertical_guides_": [ 360.0 ]
}
tempo_data = "res://music/Ondel Ondel - Jakarta.tempo"
music = ExtResource( 2 )
auto_offset = true
offset = -0.25
end_beat_count = 500

[node name="Background" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, 0, 0, 1280, 720, 1280, 720, 0 )

[node name="LaneContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -360.0
margin_top = -1280.0
margin_right = 360.0
grow_horizontal = 2
grow_vertical = 0

[node name="Sprite" type="Sprite" parent="LaneContainer"]
position = Vector2( 360, 560 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
region_rect = Rect2( 301, 216, 116, 140 )

[node name="Lane1" type="Path2D" parent="LaneContainer"]
curve = SubResource( 1 )
script = ExtResource( 4 )

[node name="Line2D" type="Line2D" parent="LaneContainer/Lane1"]
visible = false
points = PoolVector2Array( 288, 184, 96, 1440 )
width = 4.0
texture_mode = 1074266112
__meta__ = {
"_edit_lock_": true
}

[node name="Hitter" type="PathFollow2D" parent="LaneContainer/Lane1"]
position = Vector2( 145.973, 1113.09 )
offset = 939.239
rotate = false

[node name="Button" type="TouchScreenButton" parent="LaneContainer/Lane1/Hitter"]
position = Vector2( -32, -32 )
normal = ExtResource( 5 )
shape = SubResource( 2 )
script = ExtResource( 6 )

[node name="Lane2" type="Path2D" parent="LaneContainer"]
curve = SubResource( 3 )
script = ExtResource( 4 )
lane_number = 1

[node name="Line2D" type="Line2D" parent="LaneContainer/Lane2"]
visible = false
points = PoolVector2Array( 336, 184, 272, 1440 )
width = 4.0
texture_mode = 1074266112
__meta__ = {
"_edit_lock_": true
}

[node name="Hitter" type="PathFollow2D" parent="LaneContainer/Lane2"]
position = Vector2( 288.642, 1113.41 )
offset = 931.01
rotate = false

[node name="Button" type="TouchScreenButton" parent="LaneContainer/Lane2/Hitter"]
position = Vector2( -32, -32 )
normal = ExtResource( 5 )
shape = SubResource( 4 )
script = ExtResource( 6 )

[node name="Lane3" type="Path2D" parent="LaneContainer"]
curve = SubResource( 5 )
script = ExtResource( 4 )
lane_number = 2

[node name="Line2D" type="Line2D" parent="LaneContainer/Lane3"]
visible = false
points = PoolVector2Array( 384, 184, 448, 1440 )
width = 4.0
texture_mode = 1074266112
__meta__ = {
"_edit_lock_": true
}

[node name="Hitter" type="PathFollow2D" parent="LaneContainer/Lane3"]
position = Vector2( 431.358, 1113.41 )
offset = 931.01
rotate = false

[node name="Button" type="TouchScreenButton" parent="LaneContainer/Lane3/Hitter"]
position = Vector2( -32, -32 )
normal = ExtResource( 5 )
shape = SubResource( 4 )
script = ExtResource( 6 )

[node name="Lane4" type="Path2D" parent="LaneContainer"]
curve = SubResource( 6 )
script = ExtResource( 4 )
lane_number = 3

[node name="Line2D" type="Line2D" parent="LaneContainer/Lane4"]
visible = false
points = PoolVector2Array( 432, 184, 624, 1440 )
width = 4.0
texture_mode = 1074266112
__meta__ = {
"_edit_lock_": true
}

[node name="Hitter" type="PathFollow2D" parent="LaneContainer/Lane4"]
position = Vector2( 574.027, 1113.09 )
offset = 939.239
rotate = false

[node name="Button" type="TouchScreenButton" parent="LaneContainer/Lane4/Hitter"]
position = Vector2( -32, -32 )
normal = ExtResource( 5 )
shape = SubResource( 4 )
script = ExtResource( 6 )

[node name="StageContainer" type="VBoxContainer" parent="."]
margin_right = 720.0
margin_bottom = 1280.0

[node name="Background" type="Sprite" parent="StageContainer"]
editor/display_folded = true
position = Vector2( 360, 720 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )

[node name="MockBackground" type="Polygon2D" parent="StageContainer/Background"]
visible = false
color = Color( 0.403922, 0.815686, 0.996078, 1 )
polygon = PoolVector2Array( 720, 0, 720, 528, 0, 528, 0, 0 )

[node name="Stage" type="Sprite" parent="StageContainer"]
position = Vector2( 360, 808 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 8 )

[node name="Dancer" parent="StageContainer" instance=ExtResource( 9 )]
position = Vector2( 264, 385.6 )
DANCER_SPRITE = ExtResource( 10 )
FRAME_COUNT = 36

[node name="Dancer2" parent="StageContainer" instance=ExtResource( 9 )]
position = Vector2( 456, 385.6 )
DANCER_SPRITE = ExtResource( 11 )
FRAME_COUNT = 33

[node name="Metronome" type="Timer" parent="."]
editor/display_folded = true
process_mode = 0

[node name="Beep" type="AudioStreamPlayer" parent="Metronome"]
stream = ExtResource( 12 )
volume_db = -55.0

[node name="OffsetTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 13 )

[node name="Game" type="Control" parent="GUI"]
editor/display_folded = true
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Title" type="Label" parent="GUI/Game"]
margin_left = 114.0
margin_top = 16.0
margin_right = 606.0
margin_bottom = 69.0
grow_horizontal = 2
custom_fonts/font = SubResource( 7 )
text = "Title"
align = 1

[node name="Origin" type="Label" parent="GUI/Game"]
margin_left = 205.0
margin_top = 72.0
margin_right = 520.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 8 )
text = "Origin"
align = 1
valign = 1

[node name="MultiplierBar" type="TextureRect" parent="GUI/Game"]
editor/display_folded = true
margin_top = 71.0
margin_right = 90.0
margin_bottom = 641.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 15 )
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="Fill" type="TextureRect" parent="GUI/Game/MultiplierBar"]
texture = ExtResource( 17 )

[node name="Cover" type="Control" parent="GUI/Game/MultiplierBar"]
editor/display_folded = true
margin_right = 90.0
margin_bottom = 570.0
rect_clip_content = true

[node name="CoverFill" type="TextureRect" parent="GUI/Game/MultiplierBar/Cover"]
texture = ExtResource( 15 )

[node name="Tween" type="Tween" parent="GUI/Game/MultiplierBar"]

[node name="ProgressBar" type="TextureRect" parent="GUI/Game"]
editor/display_folded = true
margin_left = 666.0
margin_top = 71.0
margin_right = 756.0
margin_bottom = 641.0
grow_horizontal = 0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 15 )
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="Fill" type="TextureRect" parent="GUI/Game/ProgressBar"]
margin_right = 90.0
margin_bottom = 570.0
texture = ExtResource( 18 )

[node name="Cover" type="Control" parent="GUI/Game/ProgressBar"]
margin_right = 90.0
margin_bottom = 570.0
rect_clip_content = true

[node name="CoverFill" type="TextureRect" parent="GUI/Game/ProgressBar/Cover"]
texture = ExtResource( 15 )

[node name="Tween" type="Tween" parent="GUI/Game/ProgressBar"]

[node name="Multiplier" type="Label" parent="GUI/Game"]
margin_left = 16.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 9 )
text = "x1.0"

[node name="Score" type="Label" parent="GUI/Game"]
margin_left = 472.0
margin_top = 16.0
margin_right = 704.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 9 )
text = "0"
align = 2

[node name="Streak" type="Label" parent="GUI/Game"]
margin_left = 608.0
margin_top = 80.0
margin_right = 664.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 9 )
text = "0"
align = 2

[node name="ShowPause" type="TextureButton" parent="GUI/Game"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 76.0
margin_right = 588.0
margin_bottom = 115.0
rect_min_size = Vector2( 512, 115 )

[node name="Pause" type="Control" parent="GUI"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="GUI/Pause"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
margin_right = 680.0
margin_bottom = 1240.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.721569 )

[node name="Title" type="Label" parent="GUI/Pause"]
margin_left = 114.0
margin_top = 296.0
margin_right = 606.0
margin_bottom = 349.0
grow_horizontal = 2
custom_fonts/font = SubResource( 12 )
text = "Paused"
align = 1

[node name="ShowGame" type="TextureButton" parent="GUI/Pause"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 276.0
margin_top = 544.0
margin_right = 404.0
margin_bottom = 632.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 5 )
expand = true

[node name="Restart" type="TextureButton" parent="GUI/Pause"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 276.0
margin_top = 712.0
margin_right = 404.0
margin_bottom = 800.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 5 )
expand = true

[node name="Exit" type="TextureButton" parent="GUI/Pause"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 276.0
margin_top = 880.0
margin_right = 404.0
margin_bottom = 968.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 5 )
expand = true

[node name="End" type="Control" parent="GUI"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="GUI/End"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
margin_right = 680.0
margin_bottom = 1240.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0, 0, 0, 0.721569 )

[node name="Title" type="Label" parent="GUI/End"]
margin_left = 114.0
margin_top = 296.0
margin_right = 606.0
margin_bottom = 369.0
grow_horizontal = 2
custom_fonts/font = SubResource( 12 )
text = "Well Done!"
align = 1

[node name="Restart" type="TextureButton" parent="GUI/End"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 276.0
margin_top = 712.0
margin_right = 404.0
margin_bottom = 800.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 5 )
expand = true

[node name="Exit" type="TextureButton" parent="GUI/End"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 276.0
margin_top = 880.0
margin_right = 404.0
margin_bottom = 968.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 5 )
expand = true

[node name="DEBUG" type="Control" parent="GUI"]
editor/display_folded = true
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="GUI/DEBUG"]
margin_left = 58.0
margin_top = 111.0
margin_right = 309.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 11 )
text = "120 bpm"

[node name="Label3" type="Label" parent="GUI/DEBUG"]
margin_left = 58.0
margin_top = 153.0
margin_right = 366.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 11 )
text = "1.24 s"

[node name="Label4" type="Label" parent="GUI/DEBUG"]
margin_left = 58.0
margin_top = 195.0
margin_right = 366.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 11 )
text = "0"
[connection signal="beat" from="." to="LaneContainer/Lane1" method="spawn"]
[connection signal="beat" from="." to="LaneContainer/Lane2" method="spawn"]
[connection signal="beat" from="." to="LaneContainer/Lane3" method="spawn"]
[connection signal="beat" from="." to="LaneContainer/Lane4" method="spawn"]
[connection signal="move" from="." to="StageContainer/Dancer2" method="move"]
[connection signal="move" from="." to="StageContainer/Dancer" method="move"]
[connection signal="button_down" from="GUI/Game/ShowPause" to="." method="pause" binds= [ true ]]
[connection signal="button_down" from="GUI/Pause/ShowGame" to="." method="pause" binds= [ false ]]
[connection signal="button_down" from="GUI/Pause/Exit" to="." method="exit"]
[connection signal="button_down" from="GUI/End/Exit" to="." method="exit"]
